code25_all/python/577779.txt
import socket

HOST = "swemach.se"
PORT = 21
s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
s.connect((HOST, PORT)
data = s.recv(1024)
s.close()
print "%s" % data

File "main.txt", line 7
data = s.recv(1024)
  ^
SyntaxError: invaild syntax

